--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,12 @@
 			<artifactId>druid</artifactId>
 			<version>1.0.25</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.rocketmq</groupId>
+			<artifactId>rocketmq-client</artifactId>
+			<version>4.3.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
